added custom css for c3 chart legend

--- a/sashimi-manager/src/index.css
+++ b/sashimi-manager/src/index.css
@@ -16,6 +16,11 @@
   font-size: 14px;
 }
 
+.c3-legend-item text {
+  font-family: 'sans-serif';
+  letter-spacing: 0.12em;
+}
+
 .container {
   overflow-y: scroll;
   scrollbar-width: none; /* Firefox */
